# guidance-lark-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml  test.yml
examples/graphql/: .gitignore  README.md  demo_generate.py  graphql.lark  requirements.txt  tests.json
src/mcp_grammar_tools/: __init__.py  llg_tools.py  server.py
tests/: test_azure_integration.py  test_llg_tools.py  test_server.py
