[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guidance-lark-mcp"
version = "0.1.0"
description = "MCP server for validating and testing llguidance grammars (Lark format)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["mcp", "model-context-protocol", "llguidance", "grammar", "lark", "parser"]

dependencies = [
    "lark>=1.3.0",
    "llguidance>=1.2.0",
    "mcp>=1.17.0",
    "openai>=1.70.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/guidance-ai/guidance-lark-mcp"
Repository = "https://github.com/guidance-ai/guidance-lark-mcp.git"
Issues = "https://github.com/guidance-ai/guidance-lark-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
guidance-lark-mcp = "mcp_grammar_tools.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_grammar_tools*"]
